--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
                     <configuration>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                        <mainClass>es.upm.pproject.parkingjam.parking_jam.App</mainClass>
+                        <mainClass>es.upm.pproject.parkingjam.App</mainClass>
                         </transformer>
                     </transformers>
                     </configuration>
