Shortened audio tracks and fixed bug

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<sonar.projectKey>${project.groupId}:${project.artifactId}:${sonar.projectName}:${sonar.id}</sonar.projectKey>
 		<!-- Files to be excluded from coverage. Define for the view+controller 
 			in your final projects -->
-        <sonar.coverage.exclusions>**/view/**,**/controller/**</sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>**/view/**,**/controller/**, **/App.java</sonar.coverage.exclusions>
 		<jacoco.version>0.8.6</jacoco.version>
 		<sonar.scm.provider>git</sonar.scm.provider>
 		<sonar.language>java</sonar.language>
